--- a/styles.css
+++ b/styles.css
@@ -7,3 +7,9 @@
   grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
   padding: 3rem;
 }
+#cart-main-container {
+      
+      max-height: 600px;
+      overflow-y: auto;
+      min-height: 100px;
+    }
